src/test/compile-fail/bad-alt.rs
// error-pattern: expecting

fn main() {
  let int x = 5;
  alt x;
}
